--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,6 +2,16 @@
   padding: 0 2rem;
 }
 
+.header {
+  height: max-content;
+  padding: 1rem 0.5rem;
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .main {
   min-height: 100vh;
   padding: 4rem 0;
@@ -10,6 +20,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.button {
+  padding: 0.5rem;
 }
 
 .footer {
@@ -42,7 +56,7 @@
 .title {
   margin: 0;
   line-height: 1.15;
-  font-size: 4rem;
+  font-size: 1rem;
 }
 
 .title,
