--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,16 +2,6 @@
   padding: 0 2rem;
 }
 
-.header {
-  height: max-content;
-  padding: 1rem 0.5rem;
-  flex: 1;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-
 .main {
   min-height: 100vh;
   padding: 4rem 0;
@@ -22,13 +12,30 @@
   align-items: center;
 }
 
+.header {
+  display: flex;
+  flex-direction: row;
+  flex: 1;
+  padding: 2rem 0;
+  border-top: 1px solid #eaeaea;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .button {
-  padding: 0.5rem;
-  margin: 2em auto;
+  margin: 2em;
 }
 
 .input {
   margin: 0.5em auto;
+}
+
+.profile {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .footer {
